# Echo

./: .gitignore  README.md  io.github.lo2dev.Echo.json  meson.build
data/: io.github.lo2dev.Echo.desktop.in  io.github.lo2dev.Echo.gschema.xml  io.github.lo2dev.Echo.metainfo.xml.in  io.github.lo2dev.Echo.service  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  echo.pot  es.po  fi.po  hr.po  it.po  meson.build  nb.po  nl.po  ru.po  tr.po
src/: echo.gresource.xml  echo.in  main.py  meson.build  results.blp  results.py  results_card.blp  results_card.py  shortcuts-dialog.blp  style.css  window.blp  window.py  window.ui
subprojects/: blueprint-compiler.wrap
